# zHESSk

./: .gitignore  README.md  debug-sp1-prover.js  mock-zisk-prover.js  package-lock.json  package.json  server.js  sp1-chess-prover.js  working-sp1-prover.js
programs/chess-validator/: Cargo.toml
programs/chess-validator/src/: lib.rs
public/: index.html
sp1-chess-v2/: Cargo.toml
sp1-chess-v2/program/: Cargo.toml
sp1-chess-v2/program/src/: main.rs
sp1-chess-v2/script/: Cargo.toml
sp1-chess-v2/script/src/: main.rs
sp1-chess-validator/: Cargo.toml
sp1-chess-validator/program/: Cargo.toml
sp1-chess-validator/program/src/: main.rs
sp1-chess-validator/script/: Cargo.toml
sp1-chess-validator/script/src/: main.rs
working-sp1-chess/: Cargo.toml
working-sp1-chess/program/: Cargo.toml
working-sp1-chess/program/src/: main.rs
working-sp1-chess/script/: Cargo.toml  build.rs
working-sp1-chess/script/src/: main.rs
