[package]
name = "zhessk-chess-sp1"
version = "0.1.0"
edition = "2021"
authors = ["Zhessk Team"]

[dependencies]
sp1-zkvm = "1.2.0"

# Pin compatible versions to avoid edition2024 issues
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Ensure we use compatible crypto crates
sha2 = "0.10"

[build-dependencies]
sp1-build = "1.2.0"